# EMOVA_speech_tokenizer

./: README.md  pyproject.toml
emova_speech_tokenizer/: speech_utils.py
emova_speech_tokenizer/speech_tokenization/UVITS/: data_utils.py  mel_processing.py  models.py  modules.py  utils.py
emova_speech_tokenizer/speech_tokenization/condition_style_centroid/: condition2style_centroid.txt  gender-female_emotion-angry_speed-fast_pitch-high_centroid_style_embedding.npy  gender-female_emotion-angry_speed-fast_pitch-low_centroid_style_embedding.npy  gender-female_emotion-angry_speed-fast_pitch-normal_centroid_style_embedding.npy  gender-female_emotion-angry_speed-normal_pitch-high_centroid_style_embedding.npy  gender-female_emotion-angry_speed-normal_pitch-low_centroid_style_embedding.npy  gender-female_emotion-angry_speed-normal_pitch-normal_centroid_style_embedding.npy  gender-female_emotion-angry_speed-slow_pitch-high_centroid_style_embedding.npy  gender-female_emotion-angry_speed-slow_pitch-low_centroid_style_embedding.npy  gender-female_emotion-angry_speed-slow_pitch-normal_centroid_style_embedding.npy  gender-female_emotion-disgusted_speed-fast_pitch-high_centroid_style_embedding.npy  gender-female_emotion-disgusted_speed-fast_pitch-low_centroid_style_embedding.npy  gender-female_emotion-disgusted_speed-fast_pitch-normal_centroid_style_embedding.npy  gender-female_emotion-disgusted_speed-normal_pitch-high_centroid_style_embedding.npy  gender-female_emotion-fearful_speed-fast_pitch-high_centroid_style_embedding.npy  (+112 more)
requirements/: requirements.txt  requirements_npu.txt
(+100 files in other folders)
